sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:44: error: identifier expected but '}' found.
    	}
        ^